--- a/71-80.md
+++ b/71-80.md
@@ -1,11 +1,11 @@
 ##71. Navesti i objasniti po jednom recenicom korake pri pravljenju konceptualnog modela BP.
 Osnovni koraci pri projektovanju baza podataka su:
-• **Analiza zahteva** - podrazumeva razumevanje aplikacije i razumevanje podataka i to strukture podataka, obima podataka i odnosa medju podacima.
-• **Konceptualno modeliranje podataka** - podrazumeva klasifikaciju skupa podataka i prepoznavanje odnosa
-• **Integrisanje pogleda (lokalnih shema)** - pravi se opsta (gloalna) shema koja se dobija integrisanjem lokalnih shema (pogleda). Potrebno je uporediti sheme i prepoznati konflikte, preurediti sheme i resiti konflikte.
-• **Grupisanje entiteta** - Nakon integrisanja pogleda moze da se dobije velika shema. Cilj je grupisanja entiteta je grupisanje delova modela radi predstavljanja jendog velikog modela pomocu vise manjih dijagrama.
-
-##72.Objasniti korak* Analiza zahteva *pri pravljenju konceptualnog modela BP.
+- **Analiza zahteva** podrazumeva razumevanje aplikacije i razumevanje podataka i to strukture podataka, obima podataka i odnosa medju podacima.
+- **Konceptualno modeliranje podataka** podrazumeva klasifikaciju skupa podataka i prepoznavanje odnosa
+- **Integrisanje pogleda (lokalnih shema)** pravi se opsta (gloalna) shema koja se dobija integrisanjem lokalnih shema (pogleda). Potrebno je uporediti sheme i prepoznati konflikte, preurediti sheme i resiti konflikte.
+- **Grupisanje entiteta** Nakon integrisanja pogleda moze da se dobije velika shema. Cilj je grupisanja entiteta je grupisanje delova modela radi predstavljanja jendog velikog modela pomocu vise manjih dijagrama.
+- 
+##72.Objasniti korak *Analiza zahteva* pri pravljenju konceptualnog modela BP.
 
 Analiza zahteva podrazumeva pre svega razumevanje podataka, i to strukture
 podataka, obima podataka i odnosa medju podacima. Analiza zahteva
@@ -21,7 +21,7 @@ Osnovni ciljevi:
 - Odredjivanje i oblikovanje uslova implementacije (tehnologije, hardverske i softverske pretpostavke, aplikativni i korisnicki interfejs)
 - Izrada iscrpne dokumentacije za svenavedeno
 
-##74. Objasniti ukratko korak* Konceptualno modeliranje podataka* pri pravljenju konceptualnog modela BP.
+##74. Objasniti ukratko korak *Konceptualno modeliranje podataka* pri pravljenju konceptualnog modela BP.
 
 Cilj je klasifikovati skup podataka i prepoznati odnose. Neke smernice:
 - Entiteti treba da sadrze opisne informacije
