--- a/01-10.md
+++ b/01-10.md
@@ -26,11 +26,11 @@ Strukture podataka se povezuju ***vezama*** koje su slične pokazivačima u prog
 
 Za implementaciju u računaru koriste se usmereni grafovi.
 
-![](resources/mrezniModel1.png)
+![](resources/mrezniModel1.PNG)
 
-![](resources/mrezniModel2.png)
+![](resources/mrezniModel2.PNG)
 
-![](resources/mrezniModel3.png)
+![](resources/mrezniModel3.PNG)
 
 ## 3. Objasniti osnovne koncepte hijerarhijskog modela podataka.
 
@@ -42,7 +42,7 @@ Skup slogova u kolekciji počinje 'praznim' (dummy) čvorom.
 
 Složeni odnosi zahtevaju više hijerarhija.
 
-![](resources/hijerarhijskiModel1.png)
+![](resources/hijerarhijskiModel1.PNG)
 
 ## 4. Objasniti ukratko osnovne nivoe apstrakcije kod savremenih baza podataka.
 
@@ -111,7 +111,7 @@ Osnovna ideja je razdvajanje funkcionalnosti servera i klijenta. Server pruža u
 
 **Klijent** je zadužen za ostvarivanje komunikacije između aplikacije i servera i upravljanje podacima koji su keširani na njegovoj strani (podaci, katanci, provera konzistentnosti podataka)
 
-![](resources/klijentServer.png)
+![](resources/klijentServer.PNG)
 
 ## 9. Objasniti koncept distribuiranih arhitektura na primeru arhitekture ravnopravnih čvorova.
 
@@ -133,7 +133,7 @@ Ova arhitektura je prirodno proširenje ANSI/SPARC modela:
 - transparentnosti lokacije i replikacije podataka su podržane na osnovu definicije GCSa i LCSa i njihovog odnosa i preslikavanja.
 - transparentnost mreže počiva na GCSu
 
-![](resources/ravnopravniCvorovi.png)
+![](resources/ravnopravniCvorovi.PNG)
 
 ## 10. Objasniti osnovne koncepte relacionog modela podataka.
 
