--- a/11-20.md
+++ b/11-20.md
@@ -215,7 +215,7 @@ Definicija relacionog modela ukljucuje dva formalna jezika za rad sa relacijama:
 
 Po pitanju izrazajne moci, dokazana je ekvivalentnost ovih formalizama.
 
-###Optimizacija upita i baze podataka ###
+### Optimizacija upita i baze podataka ###
 
 Iz ugla teorije, kljucno je da se utvrdi da je upitni jezik dovoljno dobar da se
 njime moˇze iskazati bilo koji upit. U praksi je potrebna i efikasnost. Optimizacija upita obuhvata poslove analize upita i pronalazenja najefikasnijeg
@@ -247,23 +247,23 @@ Relacioni racun je zasnovan na predikatskom racunu prvog reda.
 **Primer 1**: Naredni upit izdvaja muskarce koji imaju osnovu plate manju od
 32000: 
 
-*{x|x ∈ RADNIK ∧ x.pol = 'M' ∧ x.osnova plate < 32000}*
+*{x|x ∈ RADNIK ∧ x.pol = 'M' ∧ x.osnova_plate < 32000}*
 
 **Primer 2**: Ako nas zanimaju imena, prezimena i datumi zaposlenja radnika koji
 zaradjuju bar 40000, onda je resenje naredni upit:
 
-*{(x.ime, x.prezime, x.dat zaposlenja)|x ∈ RADNIK∧x.osnova plate ≥ 40000}*
+*{(x.ime, x.prezime, x.dat_zaposlenja)|x ∈ RADNIK ∧ x.osnova_plate ≥ 40000}*
 
 **Primer 3**: Imena i prezimena zaposlenih u "Planiranju", ciji staz ulazi u kategoriju "Srednja":
 
 *{(x.ime, x.prezime)|<br />
 x ∈ RADNIK<br />
-∧(∃y ∈ ORG_JEDINICA)<br />
+∧ (∃y ∈ ORG_JEDINICA)<br />
 (y.naziv = 'Planiranje'<br />
-∧x.org jed id = y.org jed id)<br />
-∧(∃z ∈ KAT_STAZA)<br />
+∧ x.org_jed_id = y.org_jed_id)<br />
+∧ (∃z ∈ KAT_STAZA)<br />
 (z.naziv = 'Srednja'<br />
-∧z.od godine ≤ staz(x) ≤ z.do godine)<br />
+∧ z.od_godine ≤ staz(x) ≤ z.do_godine)<br />
 }*
 
 
